--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -219,21 +219,20 @@ my-class{
     margin:20px;
   }
 }
-@media (min-width:600px) and (max-width:1800px) and (min-height:300px) and (max-height:700px){
+@media (max-width:1000px) and (min-height:100px) and (max-height:600px){
   h1{
     font-size: 18px;
   }
   html{
-    font-size: 25px;
+    font-size: 20px;
   }
   h1{
     font-size: 1.5rem;
   }
   p {
     font-size: 0.5rem;
-    margin:5px;
   }
   .main{
-    padding: 27%;
+    padding: 30%;
   }
 }
